# SmartFlow

./: .devdbrc  .gitignore  CATCHUP_ROADMAP.md  New ideas  PLAN.md  README.md  pyproject.toml  requirements.txt  run_gui.py  verify_imports.py
cli/: generate_campus.py  generate_custom_layout.py  generate_scenario.py  generate_school.py  run_sim.py
data/samples/: DirPaths.json  DirPaths_scenario.json  DirWidPaths.json  DirWidPaths_scenario.json  aldkfjasldkjfh_scenario.json  floorplan_custom.json  floorplan_school.json  floorplan_simple.json  new_custom_layout.json  new_custom_layout_scenario.json  newnewnew.json  newnewnew_scenario.json  newplan.json  newplan_scenario.json  scenario_baseline.json  scenario_school.json
docs/design/: README.md
docs/evidence/: README.md
src/smartflow/: __init__.py
src/smartflow/core/: __init__.py  agents.py  algorithms.py  constants.py  dynamics.py  floorplan.py  graph_analysis.py  metrics.py  model.py  routing.py  scenario_loader.py
src/smartflow/io/: __init__.py  db.py  exporters.py  importers.py  persistence.py
src/smartflow/ui/: __init__.py  app.py
src/smartflow/ui/views/: __init__.py  comparison_view.py  config_view.py  editor_view.py  layout_view.py  results_view.py  run_view.py
src/smartflow/viz/: __init__.py  charts.py  heatmap.py
tests/: test_algorithms_mergesort.py  test_astar_routing.py  test_congestion_reroute.py  test_dynamics.py  test_floorplan.py  test_graph_analysis_recursive_dfs.py  test_persistence.py  test_routing.py  test_scenario_departure_scheduling.py
tools/: generate_test_report.py
